# Swarmed

./: .gitignore  Cargo.toml  Ideas for the navigation system.txt  Ideas to fix spider.txt  Ideas to fiximprove steam network.txt  IdeasForWeaponSystem.txt  debug.txt
assets/leg/: leg.blend  leg.blend1  leg.fbx  leg.glb  leg2.glb
assets/leg/leg/: leg.gltf
assets/map/: map.blend  map.blend1  map.glb  map_slopes.blend  map_slopes.glb
assets/weapons/glock/: glock.glb
src/: example_main.rs  main.rs  minimim_reprod.rs  old.rs
src/IKArm/: mod.rs
src/character_controller/: mod.rs
src/character_controller/camera_rig/: mod.rs
src/character_controller/input/: mod.rs
src/character_controller/kinematic_controller/: mod.rs  movement.rs
src/character_controller/movement/: mod.rs
src/character_controller/weapon/: input.rs
src/fps_camera/: mod.rs
src/fps_movement/: mod.rs
src/leg/: mod.rs
src/spider/: mod.rs
src/steam_network/: mod.rs
src/weapon_system/: mod.rs  weapon.rs  weapon_inventory.rs
