[package]
name = "zombies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
rand = "0.8" 
bevy_mod_raycast = "0.18.0"
itertools = "0.13.0"
bevy-steamworks = { git = "https://github.com/Sigma-dev/bevy_steamworks", version = "0.11", features = ["serde"] }
steamworks = { git = "https://github.com/Sigma-dev/steamworks-rs.git" }
flume = "0.11.0"
bevy_egui = "0.29.0"
serde = "1.0.209"
rmp-serde = "1.3.0"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
