[package]
name = "zombies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
rand = "0.8" 
bevy_mod_raycast = "0.18.0"
itertools = "0.13.0"
bevy_steam_p2p = { git = "https://github.com/Sigma-dev/bevy_steam_p2p" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
